# SKN28-2nd-4Team

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  skills-lock.json
back_research/: README.md  pyproject.toml
back_research/src/back_research/: __init__.py  __main__.py
back_research/tests/: test_smoke.py
be/: README.md  pyproject.toml
be/src/be/: __init__.py  app.py  schemas.py  settings.py
be/src/be/engines/: __init__.py  chat.py  mdp.py  prediction.py
be/tests/: test_smoke.py
docs/: 02_project_description_and_plan.md  03_final_deliverables_spec.md  05_agent_workspace_guidelines.md  README.md
docs/prds/: README.md
docs/project_specific/: 01_engine_technical_design.md  README.md
fe/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
fe/src/: App.tsx  index.css
fe/src/features/operator/hooks/: use-operator-assistant.ts
fe/src/features/simulator/: api.ts  contracts.ts  mock.ts
fe/src/features/simulator/hooks/: use-simulator-data.ts
fe/src/shared/api/: contracts.ts  http.ts  mock.ts  system.ts
fe/src/shared/config/: env.ts
fe/src/styles/: base.css
