[project]
name = "be"
version = "0.1.0"
description = "Backend workspace for the retention strategy simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
be = "be:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
